--- a/MyAdvancedRecorder/MyAdvancedRecorder/Base.lproj/Main.storyboard
+++ b/MyAdvancedRecorder/MyAdvancedRecorder/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -22,12 +23,113 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iMT-yh-lpH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="435" y="722"/>
+            <point key="canvasLocation" x="-385" y="1263"/>
         </scene>
-        <!--View Controller-->
+        <!--Record Files-->
+        <scene sceneID="Yso-tp-fMc">
+            <objects>
+                <tableViewController id="I12-EM-geD" customClass="FileListTableViewController" customModule="MyAdvancedRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="72" sectionHeaderHeight="28" sectionFooterHeight="28" id="hvt-pI-KUJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="1" green="0.71480019130959449" blue="0.1256913282645532" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexColor" red="0.26380360310000001" green="0.56889525159999998" blue="0.84266493060000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.2412849406" green="1" blue="0.057307983350000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexTrackingBackgroundColor" red="1" green="0.077715197099999994" blue="0.089377302229999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listCell" id="hwE-4n-2Kx" customClass="FileListTableViewCell" customModule="MyAdvancedRecorder" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="72"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hwE-4n-2Kx" id="31s-iC-RtC">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="71"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkZ-hS-EJU">
+                                            <rect key="frame" x="8" y="25" width="584" height="38"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="leadingMargin" secondItem="BkZ-hS-EJU" secondAttribute="leading" id="0rg-WY-cYY"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="BkZ-hS-EJU" secondAttribute="trailing" id="ZAi-9K-6Kn"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="1" green="0.014571240640188554" blue="0.79224655488516271" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="fileNameLabel" destination="BkZ-hS-EJU" id="sF0-tA-bN6"/>
+                                    <segue destination="Chv-KJ-IdV" kind="show" identifier="playRecord" id="lBs-Q5-z8k"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="I12-EM-geD" id="5jM-Zt-Lnv"/>
+                            <outlet property="delegate" destination="I12-EM-geD" id="aWq-Kn-8r4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Record Files" id="yVu-ze-qTd"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aA0-Qf-JMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1247" y="747"/>
+        </scene>
+        <!--Player View Controller-->
+        <scene sceneID="Moy-44-cII">
+            <objects>
+                <viewController id="Chv-KJ-IdV" customClass="PlayerViewController" customModule="MyAdvancedRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GQn-E6-BX8"/>
+                        <viewControllerLayoutGuide type="bottom" id="62W-so-PrT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Sn7-HQ-nSE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="file playing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VD2-og-8mk">
+                                <rect key="frame" x="267" y="243" width="236" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yrB-HR-aNC">
+                                <rect key="frame" x="267" y="272" width="96" height="96"/>
+                                <state key="normal" title="Play Record" image="playRecord"/>
+                                <connections>
+                                    <action selector="playRecord:" destination="Chv-KJ-IdV" eventType="touchUpInside" id="OGg-ik-KFl"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DOz-ZT-j8a">
+                                <rect key="frame" x="109" y="102" width="413" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4t-fp-bPM">
+                                <rect key="frame" x="153" y="389" width="324" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="myTextView" destination="DOz-ZT-j8a" id="tEb-hq-NYj"/>
+                        <outlet property="playButton" destination="yrB-HR-aNC" id="Psv-LK-jgD"/>
+                        <outlet property="statusLabel" destination="VD2-og-8mk" id="dgR-YN-25l"/>
+                        <outlet property="volumeLabel" destination="S4t-fp-bPM" id="UG3-pQ-qne"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ts-kj-75y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2138" y="747"/>
+        </scene>
+        <!--Recorder-->
         <scene sceneID="0YE-73-q9O">
             <objects>
-                <viewController id="pJj-MM-2oj" customClass="ViewController" customModule="MyAdvancedRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="pJj-MM-2oj" customClass="RecorderViewController" customModule="MyAdvancedRecorder" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Yxu-tH-dH5"/>
                         <viewControllerLayoutGuide type="bottom" id="pBD-HM-hmq"/>
@@ -62,16 +164,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="pNe-8d-Qha"/>
+                    <navigationItem key="navigationItem" title="Recorder" id="ihs-6a-sWd"/>
                     <connections>
                         <outlet property="playButton" destination="A08-6b-EY0" id="r4j-Wi-eQ3"/>
                         <outlet property="recordButton" destination="V2f-QK-X8L" id="Jhn-H5-rSg"/>
                         <outlet property="volumeLabel" destination="Ojl-a9-qPr" id="BHY-aS-vAk"/>
+                        <outlet property="volumeProgress" destination="HaB-Od-8MT" id="x2Q-sC-eGQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M6J-ag-qH9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="435" y="61"/>
+            <point key="canvasLocation" x="1247" y="61"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4Qy-TO-fy8">
@@ -83,13 +186,52 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="pJj-MM-2oj" kind="relationship" relationship="viewControllers" id="l5F-LF-j4W"/>
+                        <segue destination="WZs-Ad-skr" kind="relationship" relationship="viewControllers" id="l5F-LF-j4W"/>
                         <segue destination="P4J-dR-qCm" kind="relationship" relationship="viewControllers" id="9Nk-0E-YuU"/>
+                        <segue destination="P0c-LK-jvK" kind="relationship" relationship="viewControllers" id="dm0-YA-Vuo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="98Y-Th-eXo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-385" y="392"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="9kl-bj-RW1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="P0c-LK-jvK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Om6-qp-6gs"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gr4-rC-zAz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="I12-EM-geD" kind="relationship" relationship="rootViewController" id="3Jj-x7-uf4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FCa-VZ-DNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="435" y="747"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tsB-Ww-3RL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WZs-Ad-skr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="pNe-8d-Qha"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rjT-7k-0bF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pJj-MM-2oj" kind="relationship" relationship="rootViewController" id="OTe-A1-djd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bbR-xR-dke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="435" y="61"/>
         </scene>
     </scenes>
     <resources>
